--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,56 @@
-version: "3"
+version: "3.7"
 services:
   mongo:
     image: mongo:latest
     container_name: mongo
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=rootpassword
     ports:
       - "27017:27017"
     networks:
       - mongo_network
 
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
-    container_name: elasticsearch
-    environment:
-      - discovery.type=single-node
-      - ES_JAVA_OPTS=-Xms2g -Xmx2g
-      - xpack.security.enabled=true
-      - xpack.security.transport.ssl.enabled=true
-      - xpack.security.transport.ssl.verification_mode=certificate    
+  prometheus:
+    image: prom/prometheus:v2.46.0
+    container_name: prometheus
     ports:
-      - "9200:9200"
-      - "9300:9300"
-    networks:
-      - mongo_network
-
-  kibana:
-    image: docker.elastic.co/kibana/kibana:8.5.3
-    container_name: kibana
-    environment:
-      - ELASTICSEARCH_HOSTS=https://elasticsearch:9200
-      - ELASTICSEARCH_ENROLLMENT_TOKEN=eyJ2ZXIiOiI4LjUuMyIsImFkciI6WyIxNzIuMTkuMC4zOjkyMDAiXSwiZmdyIjoiNjQ5MDVhMzk4MmI3MTlhNmU1ZjZjYjM1ZjNmYTIzMmMxMzc1ZWE2MWY4ZTBkZGFmMzE3YjFmNmYyOGJjZDBmOCIsImtleSI6IlN1ZDc4Wk1CaXlESllkUnFBQkJ6OjFfd05TSjJTUWJDWHA1aWt0SE9PSEEifQ==
-    ports:
-      - "5601:5601"
-    networks:
-      - mongo_network
-    depends_on:
-      - elasticsearch
-
-  logstash:
-    image: docker.elastic.co/logstash/logstash:8.5.3
-    container_name: logstash
-    environment:
-      - LS_JAVA_OPTS=-Xmx1g -Xms1g
-    ports:
-      - "5044:5044"
+      - "9090:9090"
     volumes:
-      - ./logstash/pipeline:/usr/share/logstash/pipeline
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - prometheus-data:/prometheus
     networks:
-      - mongo_network
+      - monitoring
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_PASSWORD: "admin"
     depends_on:
-      - mongo
-      - elasticsearch
+      - prometheus
+    volumes:
+      - grafana-data:/var/lib/grafana
+    networks:
+      - monitoring
+
+  mongodb-exporter:
+    image: bitnami/mongodb-exporter:latest
+    container_name: mongodb-exporter
+    environment:
+      - MONGODB_URI=mongodb://mongo:27017  # Conecta-se ao MongoDB
+    ports:
+      - "9216:9216"  # Porta onde as métricas são expostas
+    networks:
+      - monitoring
 
 networks:
+  monitoring:
+    driver: bridge
   mongo_network:
     driver: bridge
+
+volumes:
+  prometheus-data:
+    driver: local
+  grafana-data:
+    driver: local
