--- a/prometheus.yml
+++ b/prometheus.yml
@@ -7,12 +7,6 @@ global:
 
 # Configuração de scraping (coleta de métricas)
 scrape_configs:
-  # Coleta métricas do próprio Prometheus
-  - job_name: 'prometheus'
+  - job_name: 'sensor_data'
     static_configs:
-      - targets: ['localhost:9090']
-
-  # Coleta métricas do MongoDB Exporter
-  - job_name: 'mongodb'
-    static_configs:
-      - targets: ['mongodb-exporter:9216']  # O nome do serviço e a porta do MongoDB Exporter
+      - targets: ['localhost:8000']
